--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -12,3 +12,15 @@
 
 }
 
+#nav-bar .logo {
+ width: 80px;
+ height: 80px;
+ float: left;
+}
+#nav-bar .header {
+  margin-left: 10px;
+  font-size: xx-large;
+  line-height: 80px;
+}
+
+
