--- a/public/styles/tweets-data.css
+++ b/public/styles/tweets-data.css
@@ -2,13 +2,18 @@
  * Box in the MAIN tag to STORAGE tweets
  */
 .tweets-data {
-    margin-left: 2em;
-    margin-right: 2em;
-    margin-top: 1em;
-    padding: 10px;
+    margin: 1em 2em 0;
+  }
+
+.tweets-data article {
     background-color: lightgrey;
     border-radius: 6px;
-  }
+    border: solid rgb(204, 202, 202) 3px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    padding: 10px;
+}
 /* HEADING ------------------*/
 /* Heading color and width */
 .tweets-data header {
@@ -59,3 +64,21 @@
     font-family: 'Roboto Condensed', sans-serif;
     /* vertical-align: -webkit-baseline-middle; */
  }
+.tweets-data footer i {
+    float: right;
+    padding: 5px;
+ }
+.fa { 
+    opacity: 0;
+ }
+.tweets-data:hover .fa {
+    opacity: 1;
+}
+.tweets-data:hover {
+    border-color: rgb(10, 10, 10);
+    border-width: 3px;
+}
+.tweets-data:hover header {
+    background-color: rgb(98, 99, 97); 
+    color: bisque;  
+}
