--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -21,5 +21,33 @@
   font-size: xx-large;
   line-height: 80px;
 }
+.button-block {
+  display: inline-block;
+  position: absolute; 
+  right: 30px;
+  top: 5px;
+  text-align: center;
+  vertical-align: middle;
+}
+.nav-button {
+  height: 70px;
+  width: 130px;
+  color: rgb(63, 60, 60);
+  background-color: antiquewhite;
+ 
+  border-radius: 4px;
+  font-size: 13 px;
+  border: 1px solid  black;
+}
+.nav-button span {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
 
+}
+.nav-button:hover {
+  background-color: #3d3a3a;
+  color: rgb(240, 248, 240);
+
+}
 
