improvements in tweets-data.css - header name

--- a/public/styles/tweets-data.css
+++ b/public/styles/tweets-data.css
@@ -18,38 +18,41 @@
 /* Heading color and width */
 .tweets-data header {
     background-color: rgb(149, 150, 146);
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    /* align-content: center; */
+    height: 100px;
     margin: -10px -10px 0;
     padding: 10px;
     border-radius: 6px 6px 0 0;
 }
  /* Heading img */
 .tweets-data header img {
-    border-radius: 2px;
+    border-radius: 4px;
+    float: left;
     height: 80px;
     width: 80px;
   }
 /* Heading name */
 .tweets-data header span {
     font-weight: bold;
-    padding-top: 5%;
-    font-size: 2em;
-    vertical-align: middle;
+    float: left;
+    padding-left: 5px; 
+    margin-top: 25px;
+    font-size: 25px;
     font-family: 'Roboto Condensed', sans-serif;
     }
-/* Heading name */
+/* Heading name @ */
 .tweets-data header p {
+    float: right;
+    padding-top: 15px;
+    margin-right: 0;
     font-family: 'Roboto Condensed', sans-serif;
-    padding-top: 3%;
     font-size: 1em;
     }
 /* ----------------------------------------*/
 /* tweets */
 .tweets-data .text-tweet {
     padding: 10px;
+    display: block;
+    overflow-wrap: break-word;
     width: 100%;
     vertical-align: middle;
     font-family: 'Roboto Condensed', sans-serif;
