--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -4,30 +4,26 @@
  * Do not modify these two selectors, please
  */
 html {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
 *, *:before, *:after {
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 /*
  * Global layout stuff
  */
-
 body {
   margin: 0;
   color: #244751;
   background-color: #eee;
-  font-family: 'Roboto Condensed', sans-serif;
-}
+  font-family: 'Roboto Condensed', sans-serif; }
 
 main {
   width: 450px;
   padding-top: 140px;
   margin-right: auto;
   margin-left: auto;
-  background: white;
-}
+  background: white; }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
