--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,46 +8,40 @@
   padding-right: 2em;
   padding-left: 2em;
   padding-top: 0;
-  padding-bottom: 0;
-}
+  padding-bottom: 0; }
 
 #nav-bar .logo {
- width: 80px;
- height: 80px;
- float: left;
-}
+  width: 80px;
+  height: 80px;
+  float: left; }
+
 #nav-bar .header {
   margin-left: 10px;
   font-size: xx-large;
-  line-height: 80px;
-}
+  line-height: 80px; }
+
 .button-block {
   display: inline-block;
-  position: absolute; 
+  position: absolute;
   right: 30px;
   top: 5px;
   text-align: center;
-  vertical-align: middle;
-}
+  vertical-align: middle; }
+
 .nav-button {
   height: 70px;
   width: 130px;
-  color: rgb(63, 60, 60);
+  color: #3f3c3c;
   background-color: antiquewhite;
- 
   border-radius: 4px;
   font-size: 13 px;
-  border: 1px solid  black;
-}
+  border: 1px solid  black; }
+
 .nav-button span {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: bold; }
 
-}
 .nav-button:hover {
   background-color: #3d3a3a;
-  color: rgb(240, 248, 240);
-
-}
-
+  color: #f0f8f0; }
